--- a/app/globals.css
+++ b/app/globals.css
@@ -174,31 +174,26 @@
 }
 
 ::-webkit-scrollbar-track {
-  @apply bg-slate-100 dark:bg-slate-800;
+  background: rgb(241 245 249);
+}
+
+.dark ::-webkit-scrollbar-track {
+  background: rgb(30 41 59);
 }
 
 ::-webkit-scrollbar-thumb {
-  @apply bg-slate-300 dark:bg-slate-600 rounded-full;
+  background: rgb(203 213 225);
+  border-radius: 9999px;
+}
+
+.dark ::-webkit-scrollbar-thumb {
+  background: rgb(71 85 105);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  @apply bg-slate-400 dark:bg-slate-500;
+  background: rgb(148 163 184);
 }
 
-/* Consistent margins and spacing */
-.container-padding {
-  @apply px-4 sm:px-6 lg:px-8;
-}
-
-.section-spacing {
-  @apply py-8 lg:py-12;
-}
-
-.card-spacing {
-  @apply p-6 lg:p-8;
-}
-
-/* Enhanced focus states */
-.focus-ring {
-  @apply focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 dark:focus:ring-offset-slate-800;
+.dark ::-webkit-scrollbar-thumb:hover {
+  background: rgb(100 116 139);
 }
